branchPopup: use natural comparing for branches presentation
* use natural comparing instead of lexicographical;
* optimize and cleanup with stream api;