@@ -38,6 +38,7 @@ import com.intellij.util.ArrayUtil;
 import com.intellij.util.containers.ContainerUtil;
 import com.intellij.vcs.log.Hash;
 import com.intellij.vcs.log.impl.HashImpl;
+import one.util.streamex.StreamEx;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.zmlx.hg4idea.HgVcs;
@@ -58,7 +59,6 @@ import java.util.*;
 import static com.intellij.dvcs.ui.BranchActionGroupPopup.wrapWithMoreActionIfNeeded;
 import static com.intellij.dvcs.ui.BranchActionUtil.FAVORITE_BRANCH_COMPARATOR;
 import static com.intellij.dvcs.ui.BranchActionUtil.getNumOfTopShownBranches;
-import static java.util.stream.Collectors.toList;
 import static org.zmlx.hg4idea.util.HgUtil.getNewBranchNameFromUser;
 import static org.zmlx.hg4idea.util.HgUtil.getSortedNamesWithoutHashes;
 
@@ -88,11 +88,11 @@ public class HgBranchPopupActions {
 
     popupGroup.addSeparator("Bookmarks" + repoInfo);
     String currentBookmark = myRepository.getCurrentBookmark();
-    List<HgCommonBranchActions> bookmarkActions = getSortedNamesWithoutHashes(myRepository.getBookmarks()).stream()
+    List<BookmarkActions> bookmarkActions = StreamEx.of(getSortedNamesWithoutHashes(myRepository.getBookmarks()))
       .filter(bm -> !bm.equals(currentBookmark))
       .map(bm -> new BookmarkActions(myProject, Collections.singletonList(myRepository), bm))
       .sorted(FAVORITE_BRANCH_COMPARATOR)
-      .collect(toList());
+      .toList();
     int topShownBookmarks = getNumOfTopShownBranches(bookmarkActions);
     if (currentBookmark != null) {
       bookmarkActions.add(0, new CurrentActiveBookmark(myProject, Collections.singletonList(myRepository), currentBookmark));
@@ -103,13 +103,12 @@ public class HgBranchPopupActions {
 
     //only opened branches have to be shown
     popupGroup.addSeparator("Branches" + repoInfo);
-    List<HgCommonBranchActions> branchActions =
-      myRepository.getOpenedBranches().stream()
-        .sorted()
-        .filter(b -> !b.equals(myRepository.getCurrentBranch()))
-        .map(b -> new BranchActions(myProject, Collections.singletonList(myRepository), b))
-        .sorted(FAVORITE_BRANCH_COMPARATOR)
-        .collect(toList());
+    List<BranchActions> branchActions = StreamEx.of(myRepository.getOpenedBranches())
+      .sorted(StringUtil::naturalCompare)
+      .filter(b -> !b.equals(myRepository.getCurrentBranch()))
+      .map(b -> new BranchActions(myProject, Collections.singletonList(myRepository), b))
+      .sorted(FAVORITE_BRANCH_COMPARATOR)
+      .toList();
     branchActions.add(0, new CurrentBranch(myProject, Collections.singletonList(myRepository), myRepository.getCurrentBranch()));
     wrapWithMoreActionIfNeeded(myProject, popupGroup, branchActions, getNumOfTopShownBranches(branchActions) + 1,
                                firstLevelGroup ? HgBranchPopup.SHOW_ALL_BRANCHES_KEY : null, firstLevelGroup);
